<resources>
    <string name="app_name">simple login</string>
    <string name="attempts_remaining">Attempts Remaining</string>
    <string name="welcome">WELCOME</string>
    <string name="login">LOGIN</string>
    <string name="current_value">current value</string>
    <string name="coins">coins</string>
    <string name="password">Password</string>
    <string name="name">Name</string>

    <string name="label_default_text">304.74</string>
    <string name="label_error_text">Error</string>
    <string name="base">Currency</string>
    <string name="coin">Crypto Coin</string>
    <string name="imageview_desc">Bitcoin Logo</string>
    <string name="currency">currency</string>

    <string-array name="currency_array">
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>JPY</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>USD</item>
        <item>ZAR</item>
    </string-array>

    <string-array name="coin_array">
        <item>BTC</item>
        <item>ETH</item>
    </string-array>


</resources>
