<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">
    <TextView
        android:id="@+id/TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BT"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/attempts_remaining"
        android:textColor="#FFFFFF"/>
    <Button
        android:id="@+id/BT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/PW"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_gradient"
        android:text="@string/login"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/PW"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_below="@id/NM"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/NM"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="120dp"
        android:hint="@string/name"
        android:inputType="textPersonName" />

</RelativeLayout>